header alignment fixed in mobile

--- a/new-website-src/src/components/header/navigation-bar/roshan-icon-group/roshan-icon-group.scss
+++ b/new-website-src/src/components/header/navigation-bar/roshan-icon-group/roshan-icon-group.scss
@@ -1,6 +1,7 @@
 .roshan-icon-group{
   flex: 40%;
   display: flex;
+  margin-top: 0.7vh;
   justify-content: right;
   flex-direction: row;
   width: 6.9vw;
